# Thermal-Image-Analysis

./: README.md
thermal-analysis/: pyproject.toml
thermal-analysis/tests/: test_thermal_analysis.py
