[tool.poetry]
name = "thermal-analysis"
version = "0.1.0"
description = ""
authors = ["tekritesh <ritesh.tekriwal03@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
Pillow = "^9.2.0"
matplotlib = "^3.6.0"
numpy = "^1.23.3"
pandas = "^1.5.0"
pygame = "^2.1.2"
pygame-gui = "^0.6.4"
scipy = "^1.9.1"
XlsxWriter = "^3.0.3"
thermal-base = {git = "https://github.com/detecttechnologies/thermal_base.git", rev = "main"}
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

